--- a/css/sample1.css
+++ b/css/sample1.css
@@ -1,8 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Fascinate+Inline&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Fascinate+Inline&family=Gentium+Plus&display=swap");
+*{
+  box-sizing: border-box;
+}
 body {
-  background-color: #161927;
+  /*background-color: #161927;*/
+  background-image: url('../images/bg2.png');
+  justify-content: center;
+  align-items: center;
+   
 }
 
 .navbar {
@@ -18,6 +25,9 @@ a {
   color: white;
   text-shadow: 1em;
   text-decoration: none;
+  font-size: 1.2em;
+  
+    
 }
 
 ul {
@@ -27,14 +37,17 @@ ul {
 ul li {
   display: grid;
   text-indent: 4em;
+  
+}
+a:hover{
+  color: #15f4ee;
+  font-weight: bold;
+  font-size: larger;
+  
 }
 
 section {
   padding: 2em 3em;
-}
-
-.event-section {
-  text-align: center;
 }
 
 .head-events {
@@ -62,6 +75,7 @@ h4 {
   font-family: "Gentium Plus";
   color: #15f4ee;
   text-align: center;
+  margin-top: 0%;
 }
 
 h5 {
@@ -71,47 +85,156 @@ h5 {
 }
 
 h3 {
-  font-size: 2.2em;
+  font-size: 2em;
   font-family: "Abril Fatface";
   color: #15f4ee;
+  text-align: center;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  margin-top: 4%;
 }
 
 .event-section {
-  background: black;
-  z-index: -2;
-  width: 88%;
+  /*background:#161927;
+  z-index: -1;
   padding: 0.7em 1em;
   margin: 0 auto 5em auto;
-  text-align: center;
-  border-radius: 2em;
+  /*text-align: center;*/
+  /*border-radius: 2em;
   border-bottom-style: groove;
   border-top-style: groove;
   border-color: #15f4ee;
+  position: relative;*/
+  width: 100%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-left: 0%;
+  padding-right: 0%;
+  
+  
+  
 }
-.event-section .event-content {
+.event-content {
   color: #15f4ee;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  
 }
-.event-section img {
-  border-radius: 1em;
-  border: 5px solid black;
-  width: 35em;
-  height: 25em;
-  display: flex;
+.img-container {
+  /*border-radius: 1em;
+  border: 5px solid black;*/
+  width: 100%;
+  height: 100%;
+  /*display: flex;*/
+  position:absolute;
+  
 }
 
-.container:hover {
-  box-shadow: 0 1.5px 1.5px 0 #15f4ee inset, 0 5px 50px 0 #15f4ee, 0 1.5px 1.5px 0 #15f4ee inset, 0 5px 50px 0 #15f4ee;
+.img-container img{
+  width: 100%;
+  height: 80%;
+}
+.each-container:hover {
+  /*box-shadow: 0 5px 50px 0 #15f4ee , 0 5px 50px 0 #15f4ee, 0 5px 50px 0 #15f4ee, 0 5px 50px 0 #15f4ee;*/
+  box-shadow: 0 0 30px 5px rgb(149, 149, 86);
 }
 
-.event-section .container {
-  display: flex;
-  justify-content: space-between;
+.event-section .each-container {
+  position: relative;
+  margin: 50px 7%;
+  width: 35%;
+  height: 430px;
+  overflow: hidden;
+  background:#0a0d19;
+  
+  
   text-align: center;
+  border-radius: 1em;
+  border-bottom-style: groove;
+  border-top-style:groove;
+  border-color: #15f4ee;
+  
+}
+
+.overlay{
+  position: relative;
+  width: 100%;
+  height: 80%;
+  background-color: rgba(24, 83,122 ,0.6);
+  opacity: 0;
+  transition: height linear 0.4s, opacity linear 0.2s;
+
+}
+
+.each-container:hover .overlay{
+  opacity: 1;
+  height: 25%;
+
+}
+
+.info{
+  background-color:black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  padding: 8px;
+}
+
+.additional-info{
+  border-top: 1px dashed #15f4ee;
+  margin-top: 8px;
+  padding: 20px;
+  padding-bottom: 0;
+  
+}
+
+.additional-info .location-info{
+  font-size: 1.2em;
+  margin-bottom: 20px;
+  text-align: center;
+  
+}
+.additional-info span{
+  font-weight: bolder;
+}
+
+.button{
+  background-color: transparent;
+  border-radius: 2em;
+  border-color: #15f4ee;
+  border-width: 0.2em;
+  height: 2em;
+  width: 60%;
+  font-size: 1.5em;
+  font-weight: bold;
+  color:#15f4ee;
+  top: -100px;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  cursor: pointer;
+  padding: 12px;
+  letter-spacing: 2px;
+  text-align: center;
+  
+  transition: background-color 0.8s, top 0.8s;
+}
+
+.each-container:hover .button{
+  top: 50px;
+}
+.button:hover{
+  background-color: rgba(255, 255, 255, 0.3);
 }
 .event-section .container .img-soon {
-  height: 10em;
-  width: 20em;
+  height: 100%;
+  width: 80%;
   margin-right: 5%;
+  position: relative;
 }
 .event-section .container .coming-soon {
   text-align: justify;
