--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,45 @@
 @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Fascinate+Inline&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Fascinate+Inline&family=Gentium+Plus&display=swap");
+*{
+  box-sizing: border-box;
+}
 body {
-  background-color: rgb(255, 255, 255);
+  background-image: url('../images/bg13.jpg');
+  background-image: width 100%;
+  justify-content: center;
+  align-items: center;
+   
 }
 
 .navbar {
-  background: black;
+  /*background: black;*/
   padding-top: 1em;
   padding-left: 1em;
+  background: rgba(255, 255, 255, 0.05);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(3px);
 }
 .navbar .container {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+nav{
+  text-align: center;
+  justify-content: center;
 }
 
+
 a {
-  color: white;
+  color: black;
   text-shadow: 1em;
   text-decoration: none;
+  font-size: 1.2em;
+  position: relative;
+  
+    
 }
 
 ul {
@@ -27,26 +49,33 @@ ul {
 ul li {
   display: grid;
   text-indent: 4em;
+  
+}
+a:hover{
+  background: rgba(255, 255, 255, 0.2);
+  font-weight: bold;
+  font-size: larger;
+  
 }
 
 section {
   padding: 2em 3em;
 }
 
-.event-section {
-  text-align: center;
-}
-
 .head-events {
   font-family: "Abril Fatface";
   font-size: 2em;
+  color: black;
 }
 
 .accept-email {
   text-align: center;
 }
 .accept-email .send-email {
+  color: #15f4ee;
+  background: #161927;
   border-radius: 2em;
+  border-color: #15f4ee;
   height: 2em;
   width: 6em;
   font-size: 1.5em;
@@ -54,52 +83,179 @@ section {
 }
 
 h4 {
-  font-size: 1.5em;
+  font-size: 1.6em;
   font-family: "Gentium Plus";
+  color: black;
+  text-align: center;
+  margin-top: 0%;
 }
 
 h5 {
   font-size: 1.5em;
   font-family: "Gentium Plus";
+  color: black;
 }
 
 h3 {
-  font-size: 2.2em;
+  font-size: 2em;
   font-family: "Abril Fatface";
+  color: black;
+  text-align: center;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  margin-top: 4%;
 }
 
 .event-section {
-  background: whitesmoke;
-  width: 88%;
+  /*background:#161927;
+  z-index: -1;
   padding: 0.7em 1em;
   margin: 0 auto 5em auto;
-  text-align: center;
-  border-radius: 2em;
+  /*text-align: center;*/
+  /*border-radius: 2em;
   border-bottom-style: groove;
   border-top-style: groove;
-  border-bottom-width: 0.35em;
-  border-top-width: 0.35em;
+  border-color: #15f4ee;
+  position: relative;*/
+  width: 100%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-left: 0%;
+  padding-right: 0%;
+  
+  
+  
 }
-.event-section img {
-  border-radius: 1em;
-  border: 5px solid black;
-  width: 35em;
-  height: 25em;
-  display: flex;
+.event-content {
+  color: whitesmoke;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  
+}
+.location-info{
+  color: black;
+}
+.img-container {
+  /*border-radius: 1em;
+  border: 5px solid black;*/
+  width: 100%;
+  height: 100%;
+  /*display: flex;*/
+  position:absolute;
+  
 }
 
-.event-section .container {
-  display: flex;
-  justify-content: space-between;
+.img-container img{
+  width: 100%;
+  height: 80%;
+}
+.each-container:hover {
+  /*box-shadow: 0 5px 50px 0 #15f4ee , 0 5px 50px 0 #15f4ee, 0 5px 50px 0 #15f4ee, 0 5px 50px 0 #15f4ee;*/
+  box-shadow: 0 0 30px 5px rgb(0, 0, 0);
+}
+
+.event-section .each-container {
+  position: relative;
+  margin: 50px 2%;
+  width: 20%;
+  height: 330px;
+  overflow: hidden;
+  background:white;
+  
+  
   text-align: center;
+  border-radius: 1em;
+  border-bottom-style: groove;
+  border-top-style:groove;
+  border-color: black;
+  
+}
+
+.overlay{
+  position: relative;
+  width: 100%;
+  height: 80%;
+  background-color: rgba(24, 83,122 ,0.6);
+  opacity: 0;
+  transition: height linear 0.4s, opacity linear 0.2s;
+
+}
+
+.each-container:hover .overlay{
+  opacity: 1;
+  height: 25%;
+
+}
+.event-description{
+  color: black;
+}
+
+.info{
+  background-color:white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  padding: 8px;
+}
+
+.additional-info{
+  border-top: 1px dashed black;
+  margin-top: 8px;
+  padding: 20px;
+  padding-bottom: 0;
+  
+}
+
+.additional-info .location-info{
+  font-size: 1.2em;
+  margin-bottom: 20px;
+  text-align: center;
+  color: black;
+  
+}
+.additional-info span{
+  font-weight: bolder;
+}
+
+.button{
+  background-color: transparent;
+  /*border-radius: 2em;*/
+  border-color: white;
+  border-width: 0.2em;
+  height: 2em;
+  width: 60%;
+  font-size: 1.5em;
+  font-weight: bold;
+  color:white;
+  top: -100px;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  cursor: pointer;
+  padding: 12px;
+  letter-spacing: 2px;
+  text-align: center;
+  
+  transition: background-color 0.8s, top 0.8s;
+}
+
+.each-container:hover .button{
+  top: 50px;
+}
+.button:hover{
+  background-color: rgba(255, 255, 255, 0.3);
 }
 .event-section .container .img-soon {
-  height: 10em;
-  width: 20em;
+  height: 100%;
+  width: 80%;
   margin-right: 5%;
+  position: relative;
 }
 .event-section .container .coming-soon {
   text-align: justify;
   margin-left: 20%;
   font-size: 2em;
-}/*# sourceMappingURL=main.css.map */
